// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal ContentDefault story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal ContentLarge story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal ContentLargeAuto story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-auto modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal ContentLargeMax story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-max modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal ContentSmall story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--sm"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Full story renders snapshot 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-:r7:"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  data-open=""
  id="headlessui-dialog-:r0:"
  role="dialog"
  style=""
  tabindex="-1"
>
  <div
    class="modal__overlay modal__overlay--emphasis-low"
  />
  <div
    class="modal__panel"
    data-headlessui-state="open"
    data-open=""
    id="headlessui-dialog-panel-:r6:"
  >
    <div
      class="modal__content modal__content--height-fixed modal__content--full"
    >
      <button
        aria-label="close"
        class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="24px"
            style="--icon-size: 24px;"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
            />
          </svg>
        </span>
      </button>
      <div
        class="modal-header"
      >
        <h2
          class="heading heading--headline-md modal-title"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-title-:r7:"
        >
          Modal title
        </h2>
        <div
          class="text text--headline-sm modal-sub-title"
        >
          Modal title
        </div>
      </div>
      <div
        class="modal-body"
      >
        <div
          class="fpo h-full w-full"
        >
          Modal Content
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="button-group button-group--horizontal"
        >
          <button
            class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Primary
            </span>
          </button>
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Secondary
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal LayoutVertical story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--vertical"
    >
      <button
        class="button button--layout-none button--full-width button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--full-width button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal LayoutVerticalWithTertiary story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--vertical"
    >
      <button
        class="button button--layout-none button--full-width button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--full-width button--tertiary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Tertiary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Mobile story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal MobileLandscape story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Tablet story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal WithCriticalButton story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-critical"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Critical Action
        </span>
      </button>
    </div>
  </div>
</div>
`;
